--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "lodash": "^4.17.10",
     "path-to-regexp": "^2.2.1",
     "querystring": "^0.2.0",
+    "rxjs": "^6.3.3",
     "store2": "^2.7.0",
     "v-charts": "^1.17.8",
     "vue": "^2.5.17",
